<resources>
    <string name="app_name">AspitCapture</string>
    <string name="image_details">Image Details</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="confirm">Confirm</string>
    <string name="uploads">Uploads</string>
    <string name="nothingToSeeHere">Nothing to see here</string>
    <string name="nothingToSeeHereImageText">¯\\_(ツ)_/¯</string>
    <string name="send">Send</string>
    <string name="crop">Crop</string>
    <string name="edit">Edit</string>
    <string name="patient">Patient</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="scan">Scan</string>
    <string name="worklist">Worklist</string>
    <string name="register">Register</string>
    <string name="new_pin_code">New Pin Code</string>
    <string name="confirm_pin_code">Confirm Pin Code</string>
    <string name="login">Login</string>
    <string name="pin_code">Pin Code</string>
    <string name="or_use_touch_id">Or use Touch ID</string>
    <string name="pin_mismatch">Pin mismatch</string>
    <string name="incorrect_pin">Incorrect pin code</string>
    <string name="log_out">Log Out</string>
</resources>
