<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ash">

    <no.aspit.aspitcapture.common.CustomActionBar
        android:id="@+id/actionbarUploads"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:main_text="Lena Oxton"
        app:sub_title="121289 12345"
        app:pipe_visibility="VISIBLE"
        app:bar_bg_color="@android:color/transparent"/>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottomNavigationViewUploadActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/dark_ash"
        app:itemTextColor="@color/dark_ash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_upload_summary_bottom_navigation"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUploadItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewUploadActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/open_sans_bold_32_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/uploads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionbarUploads"/>

    <TextView
        android:id="@+id/nothingToSeeHereImageTextView"
        style="@style/open_sans_regular_60_dark_ash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nothingToSeeHereImageText"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewUploadActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nothingToSeeHereTextView"
        style="@style/open_sans_light_22_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nothingToSeeHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nothingToSeeHereImageTextView" />



</androidx.constraintlayout.widget.ConstraintLayout>