<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/open_sans_bold_32_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/image_details"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/captured_imageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_rounded_corner"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/image_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="IMG 024.jpg"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/captured_imageView"
            app:layout_constraintTop_toBottomOf="@+id/captured_imageView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_title_textView"
            app:layout_constraintEnd_toEndOf="@+id/captured_imageView"
            app:layout_constraintTop_toTopOf="@+id/image_title_textView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/open_sans_light_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/image_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/image_title_textView" />

        <EditText
            android:id="@+id/image_title_editText"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/details_add_background"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/captured_imageView"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            style="@style/open_sans_light_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="@+id/image_title_editText"
            app:layout_constraintTop_toBottomOf="@+id/image_title_editText" />

        <EditText
            android:id="@+id/image_comment_editText"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/details_add_background"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/image_title_editText"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/image_details_confirm_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_button_background"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/image_comment_editText"
            app:layout_constraintStart_toStartOf="@+id/image_comment_editText"
            app:layout_constraintTop_toBottomOf="@+id/image_comment_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>